# scratch

./: .gitignore  README.md
.github/: CODEOWNERS  QUICK_REFERENCE.md  SETUP.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: README.md  api-ci.yml  dependabot-auto-merge.yml
.kiro/specs/mock-agent-api/: design.md  requirements.md  tasks.md
.kiro/steering/: project-constraints.md
apps/api/: .gitkeep  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  REQUIREMENTS_VERIFICATION.md  config.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
apps/api/tests/: __init__.py  conftest.py  test_app_config.py  test_codesmell_structure_property.py  test_codesmell_validation.py  test_config.py  test_default_language.py  test_health_endpoint.py  test_input_validation_property.py  test_logging.py  test_response_structure_property.py  test_response_validation.py  test_root_endpoint.py  test_valid_request_success_property.py  test_validation.py
apps/web/: .gitkeep
data/golden_set/: .gitkeep
docs/: CHANGES.md  CHECKLIST.md  CI_CD_SETUP.md  DEPENDENCY_SYNC.md  FINAL_REPORT.md  SYNC_VERIFICATION.md
